--- a/keyboards.html
+++ b/keyboards.html
@@ -20,7 +20,7 @@
             </ul>
     </div>
     <h2>
-        Рекомендоваенные товары
+        клавиатуры
     </h2>
     <div class="containers">
         <div class="con-1">
