--- a/columns.html
+++ b/columns.html
@@ -20,7 +20,7 @@
             </ul>
     </div>
     <h2>
-        Рекомендоваенные товары
+     колонки
     </h2>
     <div class="containers">
         <div class="con-1">
